<resources>
    <string name="app_name">KayakLog</string>
    <string name="LoginStringValue">Login</string>
    <string name="SignUpStringValue">SignUp</string>
    <string name="StartTrip">StartTrip</string>
    <string name="log">Log</string>
    <string name="achievements">Achievements</string>
    <string name="submitButton">Submit</string>
    <string name="nameTextView">User name</string>
    <string name="nameTextInput">Username</string>
    <string name="passwordInput">Password</string>
    <string name="emailInput">Email</string>
    <string name="auth_preference_file_key">AUTH_DATA_PREFERENCES</string>
    <string name="offlineButtText">Offline mode</string>
    <string name="title_activity_map">Map</string>
    <string name="mapButton">LoadMap</string>
    <string name="startButton">Start Trip</string>
    <string name="logTripButton">End Trip</string>
    <string name="logTripSubmit">Submit</string>
    <string name="saveTripTitle">Save trip</string>
    <string name="nameOfTrip">Trip name</string>
    <string name="descriptionOfTrip">Description</string>
    <string name="isTripPublic">Publicly available</string>
</resources>
