<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        android:visibility="visible"
        tools:context=".LoginActivity" tools:layout_editor_absoluteY="81dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nameTextInput"
            android:ems="10"
            android:id="@+id/userNameInput"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="46dp" app:layout_constraintEnd_toEndOf="parent"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwordInput"
            android:ems="10"
            android:id="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="@+id/userNameInput" android:layout_marginTop="41dp"
            android:layout_marginStart="1dp"
            app:layout_constraintTop_toBottomOf="@+id/userNameInput"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LoginButton"
                android:onClick="loginAction"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="207dp" app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/LoginStringValue"/>
        <Button
            android:text="@string/SignUpStringValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SignUpButton"
            android:onClick="signUp"
            app:layout_constraintStart_toStartOf="@+id/LoginButton" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/LoginButton"/>
        <Button
            android:text="@string/offlineButtText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/offlineButt"
            android:onClick="offline"
            app:layout_constraintStart_toStartOf="@+id/SignUpButton" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/SignUpButton"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loadingLayout"
        android:visibility="gone"
        tools:context=".SignUpActivity">

        <TextView
            android:id="@+id/loadingTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading..." />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>