<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/signupLayout"
        android:visibility="visible"
        tools:context=".SignUpActivity">

    <Button
            android:text="@string/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="27dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/nameTextInput"
            android:ems="10"
            android:id="@+id/userNameInput"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="46dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/passwordInput"
            android:ems="10"
            android:id="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="@+id/userNameInput" android:layout_marginTop="41dp"
            android:layout_marginStart="1dp"
            app:layout_constraintTop_toBottomOf="@+id/userNameInput"/>

    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loadingLayout"
        android:visibility="gone"
        tools:context=".SignUpActivity">

        <TextView
            android:id="@+id/loadingTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading..." />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>